# sfinae

./: CMakeLists.txt  Doxyfile  lib.hpp  main.cpp
.github/workflows/: cmake-single-platform.yml
__github/workflows/: cmake-single-platform.yml
doc/html/: annotated.html  classes.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_e919393a65ffd832df1f1faaeda6c619.html  dir_e919393a65ffd832df1f1faaeda6c619_dep.map  dir_e919393a65ffd832df1f1faaeda6c619_dep.md5  files.html  functions.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.md5  inherit_graph_16.map  inherit_graph_17.map  inherit_graph_18.map  inherit_graph_18.md5  inherit_graph_19.map  inherit_graph_19.md5  inherit_graph_2.map  inherit_graph_2.md5  (+95 more)
doc/html/search/: all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_2.js  classes_3.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
tests/: CMakeLists.txt
tests/google_/: CMakeLists.txt  test_main_google.cpp  test_main_google.hpp  test_main_google_fmain.cpp
